# pooled-ppi

./: README.md  pyproject.toml
examples/iptm_size_correction/: iptm_size_correction.ipynb
examples/pooled-ppi-sample/: pooled_ppi_sample_colab.ipynb
examples/sample-pools-mgen/: sample-pools-mgen-colab.ipynb  sample-pools-mgen.ipynb  yeast30.tsv  yeast30_init.tsv
src/pooled_ppi/: sample_pools.py
