[project]
name = "pooled-ppi"
version = "0.1-dev"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jurgjn", email = "jurgjn@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numba>=0.63.1",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]

[project.scripts]
pooled-ppi-sample = "pooled_ppi.sample_pools:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
