[project]
name = "pooled-ppi"
version = "0.1-dev"
description = "Computational screening of protein-protein interactions using pooled co-folding"
readme = "README.md"
authors = [
    { name = "jurgjn", email = "jurgjn@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numba",
    "pandas",
    "scipy",
    "tqdm",
]

[project.scripts]
pooled-ppi-sample = "pooled_ppi.sample_pools:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
